fix layout issues

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -91,6 +91,20 @@ ul {
       padding-top: rythm-units-desktop(5);
     }
   }
+
+  &--textBased {
+    @include tablet {
+      padding: rythm-units(4) rythm-units(1);
+      width: 70vw;
+      max-width: 28rem;
+      margin: 0 auto;
+    }
+
+    @include desktop {
+      padding: rythm-units-desktop(6) rythm-units-desktop(1);
+      max-width: 34rem;
+    }
+  }
 }
 
 .side {
@@ -164,63 +178,6 @@ ul {
       height: rythm-units-desktop(19);
       margin: rythm-units-desktop(4) 0 0 0;
       object-position: 50% 60%;
-    }
-  }
-}
-
-body[data-page="about"] {
-  .section {
-    @include tablet {
-      padding: rythm-units(4) rythm-units(1);
-      width: 70vw;
-      max-width: 28rem;
-      margin: 0 auto;
-    }
-
-    @include desktop {
-      padding: rythm-units-desktop(6) rythm-units-desktop(1);
-      max-width: 34rem;
-    }
-
-    &--today {
-      padding-top: rythm-units(3);
-      padding-bottom: rythm-units(3);
-
-      @include tablet {
-        padding: rythm-units(4) rythm-units(1);
-      }
-
-      @include desktop {
-        padding: rythm-units-desktop(6) rythm-units-desktop(1);
-      }
-    }
-
-    &--header {
-      padding: rythm-units(3) rythm-units(1);
-
-      @include tablet {
-        padding-top: rythm-units(5);
-        padding-bottom: rythm-units(5);
-      }
-
-      @include desktop {
-        padding: rythm-units-desktop(6) rythm-units-desktop(1);
-      }
-
-      .bigText {
-        margin: 0;
-      }
-    }
-
-    &--darkGrey {
-      @include tablet {
-        padding: rythm-units(4) rythm-units(3);
-      }
-
-      @include desktop {
-        padding-top: rythm-units-desktop(4);
-        padding-bottom: rythm-units-desktop(4);
-      }
     }
   }
 }
