--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -94,17 +94,3 @@
     }
   }
 }
-
-body[data-page="about"] {
-  .menu {
-    @include desktop {
-      width: 100%;
-    }
-
-    &__container {
-      @include desktop {
-        justify-content: center;
-      }
-    }
-  }
-}
