--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -187,6 +187,14 @@ strong {
       margin-top: rythm-units(0.25);
     }
   }
+
+  &--textBased {
+    margin-bottom: rythm-units(0.5);
+
+    @include desktop {
+      margin-bottom: rythm-units-desktop(0.75);
+    }
+  }
 }
 
 .link {
@@ -308,7 +316,7 @@ strong {
   }
 }
 
-body[data-page="about"] {
+.section--textBased {
   p {
     margin-bottom: rythm-units(1);
 
@@ -319,12 +327,6 @@ body[data-page="about"] {
 
     &:last-child {
       margin: 0;
-    }
-  }
-
-  .title {
-    &--headline {
-      margin-bottom: rythm-units(1);
     }
   }
 }
